--- a/sudoku copy.ipynb
+++ b/sudoku copy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solving the Miracle Sudoku using Mixed Integer Programming"
+    "# Solving a Sudoku using Mixed Integer Programming"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sudoku = Model(name='sudoku_miracle-mip')"
+    "sudoku = Model(name='sudoku-mip')"
    ]
   },
   {
@@ -504,6 +504,26 @@
     {
      "data": {
       "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "[docplex.mp.LinearConstraint[](x_1_1_1+x_1_2_1+x_1_3_1+x_2_1_1+x_2_2_1+x_2_3_1+x_3_1_1+x_3_2_1+x_3_3_1,EQ,1),\n",
        " docplex.mp.LinearConstraint[](x_1_1_2+x_1_2_2+x_1_3_2+x_2_1_2+x_2_2_2+x_2_3_2+x_3_1_2+x_3_2_2+x_3_3_2,EQ,1),\n",
        " docplex.mp.LinearConstraint[](x_1_1_3+x_1_2_3+x_1_3_3+x_2_1_3+x_2_2_3+x_2_3_3+x_3_1_3+x_3_2_3+x_3_3_3,EQ,1),\n",
@@ -587,7 +607,7 @@
        " docplex.mp.LinearConstraint[](x_7_7_9+x_7_8_9+x_7_9_9+x_8_7_9+x_8_8_9+x_8_9_9+x_9_7_9+x_9_8_9+x_9_9_9,EQ,1)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,26 +625,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pre_fill = [(5,3,1),(6,7,2)]"
+    "pre_fill = [(6,2,5),\n",
+    "(7,1,2),\n",
+    "(8,2,9),\n",
+    "(7,3,5),\n",
+    "(6,4,3),\n",
+    "(8,4,4),\n",
+    "(7,5,3),\n",
+    "(6,6,8),\n",
+    "(8,6,6),\n",
+    "(7,7,6),\n",
+    "(6,8,2),\n",
+    "(8,8,1),\n",
+    "(7,9,9)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[docplex.mp.LinearConstraint[](x_5_3_1,EQ,1),\n",
-       " docplex.mp.LinearConstraint[](x_6_7_2,EQ,1)]"
+       "[docplex.mp.LinearConstraint[](x_6_2_5,EQ,1),\n",
+       " docplex.mp.LinearConstraint[](x_7_1_2,EQ,1),\n",
+       " docplex.mp.LinearConstraint[](x_8_2_9,EQ,1),\n",
+       " docplex.mp.LinearConstraint[](x_7_3_5,EQ,1),\n",
+       " docplex.mp.LinearConstraint[](x_6_4_3,EQ,1),\n",
+       " docplex.mp.LinearConstraint[](x_8_4_4,EQ,1),\n",
+       " docplex.mp.LinearConstraint[](x_7_5_3,EQ,1),\n",
+       " docplex.mp.LinearConstraint[](x_6_6_8,EQ,1),\n",
+       " docplex.mp.LinearConstraint[](x_8_6_6,EQ,1),\n",
+       " docplex.mp.LinearConstraint[](x_7_7_6,EQ,1),\n",
+       " docplex.mp.LinearConstraint[](x_6_8_2,EQ,1),\n",
+       " docplex.mp.LinearConstraint[](x_8_8_1,EQ,1),\n",
+       " docplex.mp.LinearConstraint[](x_7_9_9,EQ,1)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,33 +685,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "docplex.mp.solution.SolveSolution(obj=0,values={x_1_1_1:1,x_1_2_2:1,x_1_.."
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sudoku.solve()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "docplex.mp.SolveDetails(time=0.016,status='integer optimal solution')"
+       "docplex.mp.solution.SolveSolution(obj=0,values={x_1_1_4:1,x_1_2_6:1,x_1_.."
       ]
      },
      "execution_count": 14,
@@ -677,7 +700,7 @@
     }
    ],
    "source": [
-    "sudoku.solution.solve_details"
+    "sudoku.solve()"
    ]
   },
   {
@@ -713,7 +736,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sudoku.solution.export(\"sudoku_miracle_solution.json\")"
+    "sudoku.solution.export(\"sudoku_other_solution.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Done!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "docplex.mp.SolveDetails(time=0,status='integer optimal solution')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sudoku.solve_details"
    ]
   },
   {
@@ -725,11 +785,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('sudoku_miracle_solution.txt', 'w+') as sol_file:\n",
+    "with open('sudoku_other_solution.txt', 'w+') as sol_file:\n",
     "\n",
     "    for i in N:\n",
     "        if i in [1,4,7]:\n",
@@ -747,6 +807,23 @@
     "                        sol_file.write(\"|\\n\")\n",
     "\n",
     "    sol_file.write(\"+-------+-------+-------+\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Done\")"
    ]
   }
  ],
