--- a/sudoku.ipynb
+++ b/sudoku.ipynb
@@ -4,7 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solving a Sudoku using Mixed Integer Programming"
+    "# Solving a Sudoku using Mixed Integer Linear Programming"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook shows how to setup and solve an example Sudoku Puzzle using Mixed Integer Linear Programming (MILP)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What is Sudoku"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sudoku is a puzzle game in which the player needs to fill in the blank cells in a 9x9 grid subject to various constraints. These constraints include:\n",
+    "* Each cell must contain a number from 1-9\n",
+    "* Each row must contain exactly one occurrence of each number in 1-9\n",
+    "* Each column must contain exactly one occurrence of each number in 1-9 \n",
+    "* Each designated 3x3 block must contain exactly one occurrence of each number in 1-9"
    ]
   },
   {
@@ -20,6 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# for using CPLEX within Python\n",
     "from docplex.mp.model import Model"
    ]
   },
@@ -50,22 +76,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'N=[1, 2, 3, 4, 5, 6, 7, 8, 9]'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# numbers 1-9 in row, column, and digit\n",
-    "N = list(range(1,10))\n",
-    "f\"{N=}\""
+    "N = list(range(1,10))"
    ]
   },
   {
@@ -125,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is no objective, so we can just minimize 0\n",
+    "There is no objective function. We just need to find a solution that satisfies all of the constraints. Thus, we can just set the objective function to \n",
     "\n",
     "$minimize \\quad 0$"
    ]
@@ -477,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each number appears exactly once in each box"
+    "Each number appears exactly once in each of the designated 3x3 boxes"
    ]
   },
   {
@@ -499,26 +512,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "N[:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +600,7 @@
        " docplex.mp.LinearConstraint[](x_7_7_9+x_7_8_9+x_7_9_9+x_8_7_9+x_8_8_9+x_8_9_9+x_9_7_9+x_9_8_9+x_9_9_9,EQ,1)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,10 +618,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# using the same problem from PuLP example at: https://www.coin-or.org/PuLP/CaseStudies/a_sudoku_problem.html\n",
+    "\n",
     "pre_fill = [(1,1,5),\n",
     "(2,1,6),\n",
     "(4,1,8),\n",
@@ -662,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +694,7 @@
        " docplex.mp.LinearConstraint[](x_8_9_5,EQ,1)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +721,7 @@
        "docplex.mp.solution.SolveSolution(obj=0,values={x_1_1_5:1,x_1_2_3:1,x_1_.."
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,88 +734,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Objective Function Value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sudoku.solution.objective_value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sudoku.solution.export(\"sudoku_solution.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Done!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "docplex.mp.SolveDetails(time=0.015,status='integer optimal solution')"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sudoku.solve_details"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Write Solution in Sudoku Format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# used https://www.coin-or.org/PuLP/CaseStudies/a_sudoku_problem.html for help with formatting\n",
+    "\n",
     "with open('sudoku_solution.txt', 'w+') as sol_file:\n",
     "\n",
     "    for i in N:\n",
@@ -840,28 +764,11 @@
     "\n",
     "    sol_file.write(\"+-------+-------+-------+\") "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Done\")"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('py_cplex')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -877,7 +784,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "4ad4e50790df1adc290194063a38ddab9b784578b3268fc04e81ab0a0ab2d055"
